Fix jump to bottom when dice tray is active

--- a/styles/modules/dice-tray.css
+++ b/styles/modules/dice-tray.css
@@ -3,3 +3,7 @@ section.dice-tray {
     @mixin glass-button;
   }
 }
+
+#chat:has(section.dice-tray) div.jump-to-bottom {
+  bottom: 204px;
+}
